[package]
name = "n5-wasm"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
edition = "2018"
description = "Rust-WASM bindings to the N5 tensor file system format"
readme = "README.md"
repository = "https://github.com/aschampion/n5-wasm"
keywords = ["tensor"]
categories = ["encoding", "filesystem", "science", "wasm"]

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
cfg-if = "0.1.2"
futures = "0.1.29"
js-sys = "0.3.33"
serde_json = "1.0"
wasm-bindgen = { version = "0.2.56", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.3.27"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.n5]
version = "0.4.0"
default-features = false
features = ["gzip"]

[dependencies.web-sys]
version = "0.3.33"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[profile.release]
lto = true
